# localmind

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
config/: config.example.toml
migrations/: 001_init.sql  002_vector_index.sql
scripts/: install.ps1  install.sh  make-manifest.sh  preflight.sh
src/: config.rs  health.rs  main.rs  models.rs  net_safety.rs  preflight.rs  ui.rs  update.rs  util.rs
src/agent/: mod.rs  system_prompt.rs
src/llm/: mod.rs  ollama.rs  types.rs
src/memory/: embedder.rs  kg.rs  mod.rs  search.rs  store.rs
src/repl/: mod.rs
src/tools/: archive.rs  audit.rs  docs.rs  file_ops.rs  image.rs  memory_tools.rs  mod.rs  net.rs  pdf.rs  permissions.rs  registry.rs  shell.rs  shell_validation.rs  web.rs
tests/: agent_e2e.rs  cli_smoke.rs
tests/common/: mock_ollama.rs  mod.rs  testenv.rs
